--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.cheng</groupId>
-    <artifactId>xtrq</artifactId>
+    <artifactId>ffrq</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
